--- a/10-09/mission.html
+++ b/10-09/mission.html
@@ -28,6 +28,16 @@
             <div id="div_popup"></div>
         </table>
     </div>
+    <div id="editPopup" class="popup" style="display: block;">
+        <div class="popup-button">
+            <h2>עריכת משימה</h2>
+            <input type="text" id="editInput">
+            <div class="popup-button">
+                <button id="saveEdit">שמור</button>
+                <button id="cancelEdit">ביטול</button>
+            </div>
+        </div>
+    </div>
     <script defer src="./mission.js"></script>
 </body>
 
